<resources>

    <string name="app_name">YConnect Authorization Code Sample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_yconnect_implicit_browser">YConnectImplicitBrowserActivity</string>
    <string name="title">YConnect Authorization Code Flow</string>
    <string name="button_start">Let\'s YConnect!</string>

    <string name="code">Authorization Code:</string>
    <string name="access_token">Access Token:</string>
    <string name="expiration">Expiration:</string>
    <string name="refresh_token">Refresh Token:</string>
    <string name="id_token">Id Token:</string>
    <string name="check_token">Check Token:</string>
    <string name="user_info">UserInfo:</string>
    <string name="blunk">---</string>

</resources>