<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textSize="8pt" />
    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <TextView
	    android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/blunk" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_token"
        android:textSize="8pt" />
    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <TextView
	    android:id="@+id/access_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/blunk" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiration"
        android:textSize="8pt" />
    <TextView
	    android:id="@+id/expiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/blunk" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_token"
        android:textSize="8pt" />
    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <TextView
	    android:id="@+id/refresh_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/blunk" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_token"
        android:textSize="8pt" />
    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <TextView
	    android:id="@+id/id_token"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
        android:text="@string/blunk" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_token"
        android:textSize="8pt" />
    <TextView
	    android:id="@+id/check_token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/blunk" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_info"
        android:textSize="8pt" />
    <TextView
	    android:id="@+id/user_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/blunk" />

</LinearLayout>
</ScrollView>